# ros-devcontainer-vscode

./: .env  .gitignore  Dockerfile  code-server-host.sh  code-server.sh  docker-compose.yml  docker.sh  env.sample  portainer.sh
.devcontainer/: bot.conf
html/: index.html
joystick/: 66-joystick.rules  Dockerfile  holonomic.config.yaml  start.launch
master/: Dockerfile  ros_entrypoint.sh  start.launch
rosbridge/: Dockerfile
rosbridge/root/catkin_ws/src/dialogflow_msg/: CMakeLists.txt
sim/: Dockerfile  supervisord.conf
turtlebot2/: Dockerfile  supervisord.conf
web/: index.html
webssh/: Dockerfile
webssh/app/: supervisord.conf
webssh/app/conf.d/: webssh.conf
webui/: index.html
webviz/: Dockerfile
workspace/: Dockerfile
workspace/.devcontainer/: code-server.conf  entrypoint.sh  sshd.conf  supervisord.conf  vscode.conf
xserver/: Dockerfile  index.html  supervisord.conf  vnc_min.html
xserver/app/conf.d/: websockify.conf  xvnc.conf
xserver/conf.d/: websockify.conf  xsession.conf  xvnc.conf
